[metadata]
name = gp_align
version = 0.1.0
url = https://github.com/biosustain/growth-profiler-align
download_url = https://github.com/biosustain/growth-profiler-align/archive/master.zip
author = Kristian Jensen
author_email = krisj@biosustain.dtu.dk
maintainer = Moritz E. Beber
maintainer_email = morbeb@biosustain.dtu.dk
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Bio-Informatics
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    "Programming Language :: Python :: 3.4",
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
license = Apache Software License Version 2.0
description = utilities for analyzing growth profiler raw images
long_description = file: README.rst
keywords =
    growth
    profiler
    alignment
    image

[options]
zip_safe = True
install_requires =
    numpy
    scikit-image
    scipy
    pandas
    tqdm
    click
    click-log
    six
    importlib_resources
include_package_data = True
packages = find:

[options.package_data]
gp_align =
    data/*.png
    data/*.json

[wheel]
universal = 1

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 80
exclude = __init__.py,docs
ignore = E402, D301

[pydocstyle]
match_dir = gp_align
